--- a/girl.html
+++ b/girl.html
@@ -37,7 +37,7 @@ img {
 
 <h1>😝😝😝😝😝😝😝😝</h1>
 <h2>Happy Rakshabandhan</h2>
-<h3>© Your funky & funtastic freind,Sumit(ना‌म‌ तो सुना ही‌ होगा 😂🙄)</h3>
+<h3>© YOUR FRIEND #raushang4 (ना‌म‌ तो सुना ही‌ होगा 😂🙄)</h3>
     
 </body>
 </html>
