--- a/index.html
+++ b/index.html
@@ -632,9 +632,9 @@ input {
 <figure>
 <h1 style="text-transform: uppercase;">
 <script type="text/javascript" language="Javascript">
-                 var a=prompt("Please Enter Your Name!!\n\n 🙏🙏");
+                 var a=prompt("Please Enter Your Name!!\n\n 🙏🙏🙏🙏🙏🙏");
                  document.write(a);
-                 alert("Please share this with your freinds 🙏🙏 !!")
+                 alert("Please share this with your freinds 🙏🙏🙏🙏🙏🙏 !!")
 </script>
 </h1>
 
@@ -682,7 +682,7 @@ document.write(a);
 <h3>Wishing You</h3>
 <h2>Happy Rakshabandhan</h2>
 
-<h2><img src="https://resize.indiatv.in/resize/newbucket/712_-/2019/08/rakhi-1-1565777729.jpg" class="img-responsive" alt="Rakhi" width="80%">
+<h2><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkIomF1HPFRh0ocFmkJuVv83BJHG76DBX5ig&usqp=CAU" class="img-responsive" alt="Rakhi" width="80%">
 </h2>
 </div>
 </div>
@@ -701,13 +701,13 @@ document.write(a);
 बहने के पवित्र प्यार की दुआ है राखी।।<br></b></p>
 <hr>
 
-<br><p></p></b><p></p> <img src="https://lh3.googleusercontent.com/proxy/xEIOnfz0dCDFT0RS1AYdemC72V82dJOEeseR3kcVWGKdUgt3ziv0kUcAxVo7gyf6gLCuH65ALISxmU9jNCsIIC1PHjZBBWwD0Rtph3J5SwN6C5l7nMXA-nDiz9DXgWqstitiEErVsp4" width="80%">
+<br><p></p></b><p></p> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgp1swela786YyW06qyVrhJKvbfYdz0xS5Ww&usqp=CAU" width="80%">
 <h3><u><a href="./option.html">click here for surprise</a></u></h3>
 <hr>
 <br>
  
 
-<a class="footerbtn" href="whatsapp://send?text=https://sumit-buddy.github.io/rakshabandhan/" data-action="share/whatsapp/share">
+<a class="footerbtn" href="whatsapp://send?text=https://raushang4.github.io/rakhi-surprise/" data-action="share/whatsapp/share">
 
 <img width="25px" height="25px" src="https://bit.ly/39V1fKA">
 <strong style="font-size: 15px;"> Click Here to Share on Whatsapp</strong>
@@ -718,7 +718,7 @@ document.write(a);
 <br>
 <br>
 
-<h3 style="font-family:sans-serif;font-weight:300; font-size:15px; color:#000;   text-decoration: none;">© Your funky & funtastic freind,Sumit(ना‌म‌ तो सुना ही‌ होगा 😂🙄)</h3>
+<h3 style="font-family:sans-serif;font-weight:300; font-size:15px; color:#000;   text-decoration: none;">© YOUR FRIEND #raushang4(ना‌म‌ तो सुना ही‌ होगा 😂🙄)</h3>
 
 </body>
 </html>
