--- a/option.html
+++ b/option.html
@@ -36,7 +36,7 @@ img {
 </head>
 
 <body>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRXjY9mdyoXsbkpuoLZrSE2oiQSZegodFtMQg&usqp=CAU">
+!<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuc21xFcmKdprrhBvJ_5HR0pqE9aU3OuMEV7KvvP-gGr-Zn3e1OY0nAhKr5WiFhdn5N_4&usqp=CAU"> 
 
 <h2>Choose one of the following 👇</h2>
 <br>
@@ -51,7 +51,7 @@ img {
 <br>
 <br>
 
-<h3>© Your funky & funtastic freind, Sumit(ना‌म‌ तो सुना ही‌ होगा 😂🙄)</h3>
+<h3>© YOUR FRIEND #raushang4  (ना‌म‌ तो सुना ही‌ होगा 😂🙄)</h3>
     
 </body>
 </html>
